--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
 	},
 	"dependencies": {
 		"@planetscale/database": "*",
-		"jose": "^4.14.4",
-		"nanoid": "^4.0.2"
+		"jose": "^4.14.4"
 	},
 	"devDependencies": {
 		"esbuild": "*",
