--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "run-p dev:*",
-		"dev:wrangler": "wrangler pages dev dist --live-reload --port 3000",
+		"dev:wrangler": "wrangler pages dev dist --live-reload --port 3000 --kv=SESSIONS --kv=BAG",
 		"dev:esbuild": "esbuild --bundle src/server.js --format=esm --watch --outfile=dist/_worker.js",
 		"build": "esbuild --bundle src/server.js --format=esm --outfile=dist/_worker.js",
 		"deploy": "wrangler pages publish dist"
