making cleaner router

--- a/package.json
+++ b/package.json
@@ -6,22 +6,22 @@
 		"dev": "run-p dev:*",
 		"dev:wrangler": "wrangler pages dev dist --live-reload --port 3000",
 		"dev:esbuild": "esbuild --bundle src/server.js --format=esm --watch --outfile=dist/_worker.js",
-
 		"style": "tailwindcss -i ./builder.css -o ./dist/pub/styles.css --watch",
 		"build": "esbuild --bundle src/server.js --format=esm --outfile=dist/_worker.js",
 		"deploy": "wrangler pages publish dist"
 	},
 	"dependencies": {
 		"@planetscale/database": "latest",
-		"nanoid": "latest"
+		"nanoid": "latest",
+		"jose": "latest"
 	},
 	"devDependencies": {
-		"wrangler": "latest",
-		"esbuild": "latest",
-		"tailwindcss": "latest",
 		"@tailwindcss/forms": "latest",
 		"@tailwindcss/typography": "latest",
 		"daisyui": "latest",
-		"npm-run-all": "latest"
+		"esbuild": "latest",
+		"npm-run-all": "latest",
+		"tailwindcss": "latest",
+		"wrangler": "latest"
 	}
 }
